# sqlnow

./: .gitignore  Cargo.toml  LICENSE  run_commands.txt
.github/workflows/: release-linux.yml  release-macos-arm.yml  release.yml
libquerier/: Cargo.toml
libquerier/src/: json.rs  lib.rs
libquerier/static/: package.json  querier_ui.d.ts  querier_ui.js  querier_ui_bg.wasm.d.ts
libquerier/templates/: base.html  history.html  index.html  layout.html  select_star.sql  table.html  table_schema.sql
libsqlnow/: Cargo.toml
libsqlnow/include/: index.html
libsqlnow/src/: excel.rs  lib.rs
libsqlnow/static/: index.html  manifest.json
libsqlnow/static/assets/: data-grid-overlay-editor-BkiDDibE.js  index-CZPS5Ino.js  index-DAk-AGS1.js  index-JTXJnjvo.js  index-eOb5kDpO.css  number-overlay-editor-QFjo1sRD.js
libsqlnow/templates/: base.html  index.html  layout.html  table_schema.sql  table_with_types.sql
querier/: .envrc  Cargo.toml
querier-ui/: Cargo.toml
querier-ui/src/: lib.rs
querier-ui/templates/: history.html  table.html
querier/src/: main.rs
sqlnow/: Cargo.toml
sqlnow-ui/: Cargo.toml  index.html
sqlnow-ui/src/: lib.rs
sqlnow-ui/templates/: layout.html  results.html  table.html
sqlnow/src/: main.rs
ui/: eslint.config.cjs  index.html  package-lock.json  package.json  static.json  tailwind.config.js  vite.config.js
ui/src/: index.css  main.jsx  query-form.jsx  utils.js
ui/src/routes/: history.jsx  query.jsx  root.jsx  table.jsx
