[workspace]
members = ["libquerier", "querier"]
exclude = ["querier-ui"]
resolver = "2"

[workspace.dependencies]
actix-web = "4.3.1"
minijinja = { version = "1.0.3", features = ["loader", "builtins", "urlencode", "json"] }
tokio = { version = "1.28.2", features = ["time"] }
clap = { version = "4.3.8", features = ["derive"] }
eyre = "0.6.8"
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
url = "2.4.0"
tracing-subscriber = "0.3.17"
csv = "1.2.2"
duckdb = { version = "0.10.0", features = ["extensions-full"] }

[profile.release]
debug = true

