[package]
name = "libquerier"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Let everyone query some parquet" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {"workspace" = true}
datafusion = {"workspace" = true}
minijinja = {"workspace" = true}
tokio = {"workspace" = true}
jemallocator = {"workspace" = true}
clap = {"workspace" = true}
eyre = {"workspace" = true}
arrow-csv = {"workspace" = true}
arrow = {"workspace" = true}
csv = {"workspace" = true}
serde = {"workspace" = true}
serde_json = {"workspace" = true}
object_store = {"workspace" = true}
url = {"workspace" = true}
tracing-subscriber = {"workspace" = true}
include_dir = { version = "0.7.3", features = ["glob"] }

[profile.release]
debug = 1

