[package]
name = "libquerier"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Let everyone query some parquet" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {"workspace" = true}
datafusion = {"workspace" = true}
minijinja = {"workspace" = true}
tokio = {"workspace" = true}
clap = {"workspace" = true}
eyre = {"workspace" = true}
arrow-csv = {"workspace" = true}
arrow-json = {"workspace" = true}
arrow = {"workspace" = true}
csv.workspace = true
serde = {"workspace" = true}
serde_json = {"workspace" = true}
object_store = {"workspace" = true}
url = {"workspace" = true}
tracing-subscriber = {"workspace" = true}
include_dir = { version = "0.7.3", features = ["glob"] }
futures-util = "0.3.28"
async-stream = "0.3.5"
csvs_convert = { version = "0.8.7", default-features = false, features = ["converters"] }

[profile.release]
debug = 1

