[package]
name = "querier-ui"
version = "0.1.0"
authors = ["David Raznick <kindly@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
minijinja = { version = "1.0.3", features = ["loader", "json"] }
include_dir = { version = "0.7.3", features = ["glob"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
lazy_static = "1.4.0"
matchit = "0.8.0"
serde_json = "1.0.114"
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.6.5"
reqwest = {version = "0.12.1", features=["json"]}
serde = { version = "1.0.169", features = ["derive"] }
js-sys = "0.3.69"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "console",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "Element",
    "NamedNodeMap",
    "Attr",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'Location',
    'Document',
    'NodeList',
    'DomTokenList',
    'Storage'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
