[package]
name = "querier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {"workspace" = true}
datafusion = {"workspace" = true}
minijinja = {"workspace" = true}
tokio = {"workspace" = true}
jemallocator = {"workspace" = true}
clap = {"workspace" = true}
eyre = {"workspace" = true}
arrow-csv = {"workspace" = true}
arrow = {"workspace" = true}
csv = {"workspace" = true}
serde = {"workspace" = true}
serde_json = {"workspace" = true}
object_store = {"workspace" = true}
url = {"workspace" = true}
tracing-subscriber = {"workspace" = true}
libquerier = {path = "../libquerier"}
