[package]
name = "sqlnow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {"workspace" = true}
minijinja = {"workspace" = true}
tokio = {"workspace" = true}
clap = {"workspace" = true}
eyre = {"workspace" = true}
csv = {"workspace" = true}
serde = {"workspace" = true}
serde_json = {"workspace" = true}
url = {"workspace" = true}
tracing-subscriber = {"workspace" = true}
libsqlnow = {path = "../libsqlnow"}
open = "5.1.2"
